QE-523 QA: Regions Single - Spacing issues

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-cards/style.scss
@@ -305,6 +305,7 @@
 
 		.drawer__content {
 			max-width: 640px;
+			width: 100%;
 			padding: var(--spacing-5);
 		}
 
