--- a/wp-content/themes/quarkexpeditions/src/front-end/components/product-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/product-cards/style.scss
@@ -364,8 +364,13 @@
 
 	&__transfer-package-content {
 
+		.drawer__header {
+			padding-right: var(--spacing-6);
+		}
+
 		.drawer__content {
 			max-width: 640px;
+			width: 100%;
 			padding: var(--spacing-5);
 		}
 
